工具规划缺陷验证通过，但 Oracle 实际诊断被目标数据源连接超时阻断，无法生成真实健康结论。 测试结果： - 任务 ID：f16bc613-5ed9-3892-90b7-0e7157b9a3a3 - 最终状态：PARTIAL_SUCCESS - 正确发现资产：风控oracle服务器 - 环境：DEV - 资产 ID：74b06700-409c-4959-a983-9306796d1079 - 必选工具全部进入计划：   - database_capability_query   - sql_query_execute - 可选工具由模型分析后明确跳过：   - linux_command_execute：问题只要求数据库内部诊断，不涉及操作系统检查   - server_capability_query：不需要主机资产发现 - 模板选择完全正确，rejected_template_ids 为空：   - ORACLE_INSTANCE_STATUS   - ORACLE_SESSION_OVERVIEW   - ORACLE_LOCKS   - ORACLE_SYSTEM_EVENTS   - ORACLE_TABLESPACE_SIZE - Runtime 编译结果：selectedCount=5、compiledCalls=5、blockedCalls=0 执行失败原因： - 前三个模板：Oracle JDBC 连接获取超过 30 秒 - 后两个模板：连续失败后熔断器开启 - Oracle 驱动缺失问题已经消失；当前错误变为：   Unable to acquire JDBC Connection - 因此更可能是 DEV Oracle 地址不可达、监听未开放、连接配置错误或数据库不可用，而不是规划或驱动问题。 Runtime 没有把失败包装成健康结论，最终答案明确说明必需数据获取失败。这一证据治理行为是正确的。 本次补充修复位于： - [InterpretationPlanRuntime.java (line 8727)](/D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/main/java/com/chatchat/agents/runtime/plan/InterpretationPlanRuntime.java:8727) - [InterpretationPlanRuntimeTest.java (line 5953)](/D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-agents/src/test/java/com/chatchat/agents/runtime/plan/InterpretationPlanRuntimeTest.java:5953) 回归测试通过，错误资产路径现在会由 Runtime 接管，不会再造成 BINDING_FAILED。API 已重新部署并运行，PID 为 17016；MCP 保持运行，PID 为 27876。 详细证据： - [API 日志](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/deploy/chatchat-1.0.0-SNAPSHOT/logs/chatchat.log) - [MCP 日志](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/deploy/chatchat-mcp-server-1.0.0-SNAPSHOT/logs/chatchat-mcp-server.log) 结论：跨领域“必选工具 + 模型规划可选工具”的缺陷已经修复并通过真实任务验证；当前剩余阻塞项是 DEV Oracle 数据源自身的网络或连接配置。